--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Function Scope</title>
+    <link rel="icon" type="image/x-icon" href="./assets/js-scope.png">
+    <script src="./scripts.js" type="text/javascript" defer></script>
 </head>
 <body>
     
